Added logs.