@@ -57,11 +57,11 @@ public class RefDataServiceImpl implements RefDataService {
                                 .anyMatch(courtId -> courtId.equals(courtDetail1.getCourtTypeId())))
                             .toList();
             if (!filteredCourtDetail.isEmpty()) {
-                courtDetail = filteredCourtDetail.get(0);
+                courtDetail = filteredCourtDetail.getFirst();
                 if (courtDetail.getHearingVenueAddress() != null) {
                     courtDetail.setHearingVenueAddress(courtDetail.getHearingVenueAddress());
                 }
-                log.info("Court details filtered" + courtDetail);
+                log.info("Court details filtered {}", courtDetail);
             }
         } catch (HttpClientErrorException | HttpServerErrorException exception) {
             log.info("RefData call HttpClientError exception {}", exception.getMessage());
